<resources>
    <string name="app_name">InstagramClone</string>
    <string name="btnLogin_text">Login</string>
    <string name="etUsername_hint">Username</string>
    <string name="etPassword_hint">Password</string>
    <string name="btnCaptureImage_text">Take Picture</string>
    <string name="btnSubmit_text">Submit</string>
    <string name="btnSubmitUserImage_text">Submit as Profile Picture</string>
    <string name="btnLogout_text">Logout</string>
    <string name="etDescription_hint">Description…</string>
    <string name="ivPostImage_contentDescription">Your image to be uploaded.</string>
    <string name="tvSignUp_text">Don\'t have an account?</string>
    <string name="btnSignUp_text">Sign up</string>
    <string name="etEmail_hint">Email</string>
    <string name="tvLogin_text">Have an account?</string>
    <string name="page_home_title">Home</string>
    <string name="page_post_title">Post</string>
    <string name="page_user_title">User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>