<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etDescription_hint"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|textAutoCorrect" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#BCBCBC"
        android:text="@string/btnCaptureImage_text" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/ivPostImage_contentDescription"
        android:visibility="visible"
        tools:srcCompat="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/pbPostLoading"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#BCBCBC"
        android:text="@string/btnSubmit_text" />

    <Button
        android:id="@+id/btnSubmitUserImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#BCBCBC"
        android:text="@string/btnSubmitUserImage_text" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#BCBCBC"
        android:text="@string/btnLogout_text" />


</LinearLayout>